fix blurry sidebar icons

--- a/rnote-ui/data/ui/style.css
+++ b/rnote-ui/data/ui/style.css
@@ -1,6 +1,6 @@
-.sidebar_action_image {
-    margin-left: -5px;
-    margin-right: -5px;
+.sidebar_action_button image {
+    margin-left: -2px;
+    margin-right: -2px;
 }
 
 .main_title.unsaved_changes .title {
